@@ -92,3 +92,12 @@
 
 /* About */
 "Report A Bug"="バグを報告";
+
+/* OS Version */
+"Minimum_OS"="iTerm requires OS X version 10.2 or higher to run. This application will now terminate.";
+
+/* Sorry */
+"Sorry"="Sorry";
+
+/* Quit */
+"Quit"="Quit";
